# seihou

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Justfile  README.md  cabal.project  flake.module.nix  flake.nix  mina.kdl  mori.dhall
mori/: repo-id
seihou-cli/: seihou-cli.cabal
seihou-cli/data/: assist-prompt.md  blueprint-migration-prompt.md  blueprint-prompt.md  bootstrap-prompt.md  prompt-run-prompt.md  setup-prompt.md
seihou-cli/help/: agent.md  blueprints.md  config.md  contexts.md  git-repository.md  kit.md  migrations.md  modules.md  prompts.md  templating.md  update.md  variables.md
seihou-cli/src/: Main.hs
seihou-cli/src-exe/: Main.hs
seihou-cli/src-exe/Seihou/CLI/: AgentLaunchExec.hs  AgentMigrate.hs  AgentRun.hs  Assist.hs  Bootstrap.hs  Browse.hs  Commands.hs  Completions.hs  Config.hs  Context.hs  Help.hs  Install.hs  Kit.hs  NewBlueprint.hs  NewModule.hs  NewPrompt.hs  Outdated.hs  PromptRun.hs  Remove.hs  Run.hs  Setup.hs  Status.hs  Update.hs  Upgrade.hs  Validate.hs  ValidateBlueprint.hs  ValidatePrompt.hs  Vars.hs  Version.hs
seihou-cli/src/Seihou/: Fzf.hs
seihou-cli/src/Seihou/CLI/: AgentCompletion.hs  AgentConfig.hs  AgentConfigShow.hs  AgentLaunch.hs  AgentModels.hs  AppliedBlueprint.hs  AppliedBlueprintMigration.hs  Assist.hs  BlueprintExecution.hs  BlueprintMigration.hs  Bootstrap.hs  Browse.hs  BrowseFormat.hs  CommandExecution.hs  Commands.hs  CommitMessage.hs  Config.hs  Context.hs  Diff.hs  Extension.hs  Git.hs  Help.hs  Init.hs  Install.hs  InstallHistory.hs  InstallShared.hs  KitPaths.hs  List.hs  Migrate.hs  NewModule.hs  NewRecipe.hs  Outdated.hs  PendingMigrations.hs  PromptRender.hs  Registry.hs  RemoteVersion.hs  Remove.hs  Run.hs  SavePrompted.hs  SchemaUpgrade.hs  (+11 more)
seihou-cli/src/Seihou/Effect/: Fzf.hs  FzfInterp.hs
seihou-cli/src/Seihou/Fzf/: Selector.hs
seihou-cli/test/: Main.hs
seihou-cli/test/Seihou/: FzfSpec.hs
seihou-cli/test/Seihou/CLI/: AgentCompletionSpec.hs  AgentConfigShowSpec.hs  AgentConfigSpec.hs  AgentLaunchSpec.hs  AgentMigrateE2ESpec.hs  AgentModelsSpec.hs  AppliedBlueprintMigrationSpec.hs  AppliedBlueprintSpec.hs  BlueprintMigrationSpec.hs  BrowseFormatSpec.hs  CommandExecutionSpec.hs  CommitMessageSpec.hs  DiffSpec.hs  ExtensionSpec.hs  GitSpec.hs  InitSpec.hs  InstallHistorySpec.hs  KitPathsSpec.hs  ListSpec.hs  MigrateSpec.hs  PendingMigrationSpec.hs  PromptRenderSpec.hs  RemoteVersionSpec.hs  RunBlueprintRefusalSpec.hs  SavePromptedSpec.hs  StatusSpec.hs  UpdateE2ESpec.hs  UpdateFixture.hs  UpdateInteractionSpec.hs  UpdateRenderSpec.hs  UpdateSpec.hs  UpgradeSpec.hs
seihou-core/: LICENSE  seihou-core.cabal
seihou-core/src/Seihou/: Prelude.hs
seihou-core/src/Seihou/Composition/: Graph.hs  Instance.hs  Plan.hs  Recipe.hs  Resolve.hs
seihou-core/src/Seihou/Core/: AgentPrompt.hs  Application.hs  Blueprint.hs  CommandFingerprint.hs  CommandVar.hs  Context.hs  Expr.hs  Install.hs  Migration.hs  Module.hs  Path.hs  Recipe.hs  Registry.hs  Scaffold.hs  SchemaUpgrade.hs  Status.hs  Types.hs  Variable.hs  Version.hs
seihou-core/src/Seihou/Dhall/: Config.hs  Eval.hs
seihou-core/src/Seihou/Effect/: BaselineStore.hs  BaselineStoreInterp.hs  BaselineStorePure.hs  ConfigReader.hs  ConfigReaderInterp.hs  ConfigReaderPure.hs  ConfigWriter.hs  ConfigWriterInterp.hs  ConfigWriterPure.hs  Console.hs  ConsoleInterp.hs  ConsolePure.hs  DhallEval.hs  DhallEvalInterp.hs  Filesystem.hs  FilesystemInterp.hs  FilesystemPure.hs  Logger.hs  LoggerInterp.hs  LoggerPure.hs  ManifestStore.hs  ManifestStoreInterp.hs  ManifestStorePure.hs  Process.hs  ProcessInterp.hs  ProcessPure.hs
seihou-core/src/Seihou/Engine/: Baseline.hs  Conflict.hs  DhallJSON.hs  Diff.hs  Execute.hs  Migrate.hs  Plan.hs  Preview.hs  Reconcile.hs  Remove.hs  Section.hs  Template.hs  TemplatePrototype.hs  ThreeWayMerge.hs  TypedDhallText.hs  UpdateTransaction.hs  Validate.hs
seihou-core/src/Seihou/Interaction/: Confirm.hs  Prompt.hs
seihou-core/src/Seihou/Manifest/: Hash.hs  Types.hs
seihou-core/test/: Main.hs
seihou-core/test/Seihou/Composition/: GraphSpec.hs  InstanceSpec.hs  PlanSpec.hs  RecipeSpec.hs  ResolveSpec.hs
seihou-core/test/Seihou/Core/: AgentPromptSpec.hs  ApplicationSpec.hs  BlueprintSpec.hs  CommandFingerprintSpec.hs  CommandVarSpec.hs  ContextSpec.hs  ExprSpec.hs  InstallSpec.hs  ListSpec.hs  MigrationSpec.hs  ModuleSpec.hs  RecipeSpec.hs  RegistryEmitSpec.hs  RegistrySpec.hs  RegistrySyncSpec.hs  ScaffoldSpec.hs  SchemaUpgradeSpec.hs  StatusSpec.hs  TypesSpec.hs  VariableSpec.hs  VersionSpec.hs
seihou-core/test/Seihou/Dhall/: ConfigSpec.hs  EvalSpec.hs  MigrationDecoderSpec.hs
seihou-core/test/Seihou/Effect/: BaselineStoreSpec.hs  ConfigReaderSpec.hs  ConfigWriterSpec.hs  FilesystemSpec.hs  LoggerSpec.hs  ManifestStoreSpec.hs
seihou-core/test/Seihou/Engine/: BaselineSpec.hs  ConflictSpec.hs  DiffSpec.hs  ExecuteSpec.hs  MigrateSpec.hs  PlanSpec.hs  PreviewSpec.hs  ReconcileSpec.hs  RemoveSpec.hs  SectionSpec.hs  TemplateSpec.hs  ThreeWayMergeSpec.hs  UpdateTransactionSpec.hs  ValidateSpec.hs
seihou-core/test/Seihou/Evaluation/: ConditionalTemplateSpec.hs  DhallTextFlakeSpec.hs  SplitFlakeSpec.hs  TypedDhallTextSpec.hs
seihou-core/test/Seihou/Integration/: CompositionSpec.hs  ExecutionSpec.hs  GenerationSpec.hs  ModuleLoadSpec.hs
seihou-core/test/Seihou/Interaction/: ConfirmSpec.hs  PromptSpec.hs
seihou-core/test/Seihou/Manifest/: TypesSpec.hs
seihou-core/test/fixtures/bad-strategy/: module.dhall
seihou-core/test/fixtures/bad-vartype/: module.dhall
seihou-core/test/fixtures/command-test/: module.dhall
seihou-core/test/fixtures/haskell-base/: module.dhall
seihou-core/test/fixtures/haskell-pinned-recipe/: recipe.dhall
seihou-core/test/fixtures/haskell-shared-readme/: module.dhall
seihou-core/test/fixtures/haskell-with-nix/: module.dhall
seihou-core/test/fixtures/haskell-with-nix-recipe/: recipe.dhall
seihou-core/test/fixtures/invalid-module/: module.dhall
seihou-okf-extension/: seihou-okf-extension.cabal
seihou-okf-extension/src-exe/: Main.hs
seihou-okf-extension/test/: Main.hs
(+273 files in other folders)
