cabal-version: 3.0
name: seihou-cli
version: 0.1.0.0
synopsis: CLI for Seihou project scaffolding
build-type: Simple

library seihou-cli-internal
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src
  visibility: private
  exposed-modules:
    Seihou.CLI.BrowseFormat
    Seihou.CLI.Diff
    Seihou.CLI.Init
    Seihou.CLI.List
    Seihou.Effect.Fzf
    Seihou.Effect.FzfInterp
    Seihou.Fzf
    Seihou.Fzf.Selector
    Seihou.Fzf.Selector.Module

  other-modules:
    Seihou.CLI.Shared
    Seihou.CLI.Style

  build-depends:
    aeson >=2.1 && <3,
    ansi-terminal >=1.1 && <2,
    base >=4.18 && <5,
    bytestring >=0.11 && <1,
    containers >=0.6 && <1,
    directory >=1.3 && <2,
    effectful-core >=2.4 && <3,
    filepath >=1.4 && <2,
    process >=1.6 && <2,
    seihou-core,
    text >=2.0 && <3,

executable seihou
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src
  main-is: Main.hs
  autogen-modules: Paths_seihou_cli
  other-modules:
    Paths_seihou_cli
    Seihou.CLI.AgentLaunch
    Seihou.CLI.Assist
    Seihou.CLI.Bootstrap
    Seihou.CLI.Browse
    Seihou.CLI.BrowseFormat
    Seihou.CLI.Commands
    Seihou.CLI.Completions
    Seihou.CLI.Completions.Bash
    Seihou.CLI.Completions.Fish
    Seihou.CLI.Completions.Zsh
    Seihou.CLI.Config
    Seihou.CLI.Context
    Seihou.CLI.Diff
    Seihou.CLI.Help
    Seihou.CLI.Init
    Seihou.CLI.Install
    Seihou.CLI.List
    Seihou.CLI.NewModule
    Seihou.CLI.Outdated
    Seihou.CLI.Run
    Seihou.CLI.Setup
    Seihou.CLI.Shared
    Seihou.CLI.Status
    Seihou.CLI.Style
    Seihou.CLI.Validate
    Seihou.CLI.Vars
    Seihou.CLI.Version
    Seihou.Effect.Fzf
    Seihou.Effect.FzfInterp
    Seihou.Fzf
    Seihou.Fzf.Selector
    Seihou.Fzf.Selector.Module

  build-depends:
    aeson >=2.1 && <3,
    aeson-pretty >=0.8 && <1,
    ansi-terminal >=1.1 && <2,
    base >=4.18 && <5,
    bytestring >=0.11 && <1,
    containers >=0.6 && <1,
    directory >=1.3 && <2,
    effectful-core >=2.4 && <3,
    file-embed >=0.0.15 && <1,
    filepath >=1.4 && <2,
    githash ^>=0.1,
    optparse-applicative >=0.18 && <1,
    process >=1.6 && <2,
    seihou-core,
    temporary >=1.3 && <2,
    text >=2.0 && <3,
    time >=1.12 && <2,

test-suite seihou-cli-test
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings

  hs-source-dirs: test
  main-is: Main.hs
  default-extensions:
    TypeFamilies

  other-modules:
    Seihou.CLI.BrowseFormatSpec
    Seihou.CLI.DiffSpec
    Seihou.CLI.InitSpec
    Seihou.CLI.ListSpec
    Seihou.FzfSpec

  build-depends:
    base >=4.18 && <5,
    effectful-core >=2.4 && <3,
    hspec >=2.11 && <3,
    seihou-cli-internal,
    seihou-core,
    tasty >=1.4 && <2,
    tasty-hspec >=1.2 && <2,
    text >=2.0 && <3,
