cabal-version: 3.0
name: seihou-cli
version: 0.4.0.0
synopsis: CLI for Seihou project scaffolding
description:
  Command-line interface for Seihou, a composable project scaffolding
  system. It creates and manages typed scaffolding modules, blueprints,
  migrations, registry operations, and project-local configuration.

homepage: https://github.com/shinzui/seihou
bug-reports: https://github.com/shinzui/seihou/issues
license: BSD-3-Clause
license-file: LICENSE
author: Nadeem Bitar
maintainer: nadeem@gmail.com
copyright: (c) 2026 Nadeem Bitar
category: Development
build-type: Simple
extra-source-files:
  data/assist-prompt.md
  data/blueprint-prompt.md
  data/bootstrap-prompt.md
  data/prompt-run-prompt.md
  data/setup-prompt.md
  help/agent.md
  help/blueprints.md
  help/config.md
  help/contexts.md
  help/git-repository.md
  help/kit.md
  help/migrations.md
  help/modules.md
  help/prompts.md
  help/templating.md
  help/variables.md

source-repository head
  type: git
  location: https://github.com/shinzui/seihou.git

library seihou-cli-internal
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src
  visibility: private
  exposed-modules:
    Seihou.CLI.AgentCompletion
    Seihou.CLI.AgentConfig
    Seihou.CLI.AgentLaunch
    Seihou.CLI.AgentModels
    Seihou.CLI.AppliedBlueprint
    Seihou.CLI.BrowseFormat
    Seihou.CLI.CommandExecution
    Seihou.CLI.CommitMessage
    Seihou.CLI.Completions.Bash
    Seihou.CLI.Completions.Fish
    Seihou.CLI.Completions.Zsh
    Seihou.CLI.Diff
    Seihou.CLI.Extension
    Seihou.CLI.Git
    Seihou.CLI.Init
    Seihou.CLI.InstallHistory
    Seihou.CLI.InstallShared
    Seihou.CLI.List
    Seihou.CLI.Migrate
    Seihou.CLI.PendingMigrations
    Seihou.CLI.PromptRender
    Seihou.CLI.Registry
    Seihou.CLI.Registry.Sync
    Seihou.CLI.Registry.Validate
    Seihou.CLI.RemoteVersion
    Seihou.CLI.SavePrompted
    Seihou.CLI.SchemaVersion
    Seihou.CLI.Shared
    Seihou.CLI.StatusRender
    Seihou.CLI.Style
    Seihou.CLI.VersionCompare
    Seihou.Effect.Fzf
    Seihou.Effect.FzfInterp
    Seihou.Fzf
    Seihou.Fzf.Selector
    Seihou.Fzf.Selector.Module

  build-depends:
    aeson >=2.1 && <3,
    aeson-pretty >=0.8 && <1,
    ansi-terminal >=1.1 && <2,
    baikai ^>=0.3.1.0,
    baikai-claude ^>=0.3.0.1,
    baikai-openai ^>=0.3.0.1,
    base >=4.18 && <5,
    bytestring >=0.11 && <1,
    containers >=0.6 && <1,
    directory >=1.3 && <2,
    effectful-core >=2.4 && <3,
    file-embed >=0.0.15 && <1,
    filepath >=1.4 && <2,
    process >=1.6 && <2,
    seihou-core ^>=0.4.0.0,
    temporary >=1.3 && <2,
    text >=2.0 && <3,
    time >=1.12 && <2,
    vector ^>=0.13.2.0,

executable seihou
  default-language: GHC2024
  ghc-options: -threaded
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src-exe
  main-is: Main.hs
  autogen-modules: Paths_seihou_cli
  -- Every module below is "trapped" in the executable target by one
  -- of: Options.Applicative, Data.FileEmbed, GitHash,
  -- Paths_seihou_cli, or — transitively — another trapped seihou
  -- module (most often Seihou.CLI.Commands). For the per-module
  -- trapping reason, see docs/dev/architecture/overview.md, section
  -- "CLI Module Placement Convention" and its "Trapped-modules
  -- inventory" subsection. New code should default to the
  -- seihou-cli-internal library at hs-source-dirs: src.
  other-modules:
    Paths_seihou_cli
    Seihou.CLI.AgentLaunchExec
    Seihou.CLI.AgentRun
    Seihou.CLI.Assist
    Seihou.CLI.Bootstrap
    Seihou.CLI.Browse
    Seihou.CLI.Commands
    Seihou.CLI.Completions
    Seihou.CLI.Config
    Seihou.CLI.Context
    Seihou.CLI.Help
    Seihou.CLI.Install
    Seihou.CLI.Kit
    Seihou.CLI.NewBlueprint
    Seihou.CLI.NewModule
    Seihou.CLI.NewPrompt
    Seihou.CLI.NewRecipe
    Seihou.CLI.Outdated
    Seihou.CLI.PromptRun
    Seihou.CLI.Remove
    Seihou.CLI.Run
    Seihou.CLI.SchemaUpgrade
    Seihou.CLI.Setup
    Seihou.CLI.Status
    Seihou.CLI.Upgrade
    Seihou.CLI.Validate
    Seihou.CLI.ValidateBlueprint
    Seihou.CLI.ValidatePrompt
    Seihou.CLI.Vars
    Seihou.CLI.Version

  build-depends:
    aeson >=2.1 && <3,
    aeson-pretty >=0.8 && <1,
    ansi-terminal >=1.1 && <2,
    baikai ^>=0.3.1.0,
    baikai-claude ^>=0.3.0.1,
    baikai-kit ^>=0.1.0.2,
    baikai-openai ^>=0.3.0.1,
    base >=4.18 && <5,
    bytestring >=0.11 && <1,
    containers >=0.6 && <1,
    directory >=1.3 && <2,
    effectful-core >=2.4 && <3,
    file-embed >=0.0.15 && <1,
    filepath >=1.4 && <2,
    githash ^>=0.1,
    optparse-applicative >=0.18 && <1,
    process >=1.6 && <2,
    seihou-cli-internal,
    seihou-core ^>=0.4.0.0,
    temporary >=1.3 && <2,
    text >=2.0 && <3,
    time >=1.12 && <2,

test-suite seihou-cli-test
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings

  hs-source-dirs: test
  main-is: Main.hs
  default-extensions:
    TypeFamilies

  other-modules:
    Seihou.CLI.AgentCompletionSpec
    Seihou.CLI.AgentConfigSpec
    Seihou.CLI.AgentLaunchSpec
    Seihou.CLI.AgentModelsSpec
    Seihou.CLI.AppliedBlueprintSpec
    Seihou.CLI.BrowseFormatSpec
    Seihou.CLI.CommandExecutionSpec
    Seihou.CLI.CommitMessageSpec
    Seihou.CLI.DiffSpec
    Seihou.CLI.ExtensionSpec
    Seihou.CLI.GitSpec
    Seihou.CLI.InitSpec
    Seihou.CLI.InstallHistorySpec
    Seihou.CLI.ListSpec
    Seihou.CLI.MigrateSpec
    Seihou.CLI.PendingMigrationSpec
    Seihou.CLI.PromptRenderSpec
    Seihou.CLI.Registry.SyncSpec
    Seihou.CLI.Registry.ValidateSpec
    Seihou.CLI.RemoteVersionSpec
    Seihou.CLI.RunBlueprintRefusalSpec
    Seihou.CLI.SavePromptedSpec
    Seihou.CLI.StatusSpec
    Seihou.CLI.UpgradeSpec
    Seihou.FzfSpec

  build-depends:
    aeson >=2.1 && <3,
    baikai ^>=0.3.1.0,
    base >=4.18 && <5,
    bytestring >=0.11 && <1,
    containers >=0.6 && <1,
    directory >=1.3 && <2,
    effectful-core >=2.4 && <3,
    filepath >=1.4 && <2,
    hspec >=2.11 && <3,
    process >=1.6 && <2,
    seihou-cli-internal,
    seihou-core ^>=0.4.0.0,
    tasty >=1.4 && <2,
    tasty-hspec >=1.2 && <2,
    temporary >=1.3 && <2,
    text >=2.0 && <3,
    time >=1.12 && <2,
    vector ^>=0.13.2.0,
