cabal-version: 3.0
name: seihou-okf-extension
version: 0.3.0.0
synopsis: OKF documentation extension for Seihou registries
description:
  External Seihou extension executable for generating OKF documentation bundles
  from Seihou registries. The initial package establishes the extension boundary;
  later plans add registry loading, rendering, and the real docs command.

homepage: https://github.com/shinzui/seihou
bug-reports: https://github.com/shinzui/seihou/issues
license: BSD-3-Clause
license-file: LICENSE
author: Nadeem Bitar
maintainer: nadeem@gmail.com
copyright: (c) 2026 Nadeem Bitar
category: Development
build-type: Simple

source-repository head
  type: git
  location: https://github.com/shinzui/seihou.git

library seihou-okf-extension-internal
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src
  visibility: private
  exposed-modules:
    Seihou.OKF.Extension

  build-depends:
    base >=4.18 && <5,
    okf-core >=0.1 && <0.2,
    optparse-applicative >=0.18 && <1,
    seihou-core ^>=0.3.0.0,
    text >=2.0 && <3,

executable seihou-okf-extension
  default-language: GHC2024
  ghc-options: -threaded
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: src-exe
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    seihou-okf-extension-internal,

test-suite seihou-okf-extension-test
  type: exitcode-stdio-1.0
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    hspec >=2.11 && <3,
    seihou-okf-extension-internal,
    tasty >=1.4 && <2,
    tasty-hspec >=1.2 && <2,
    text >=2.0 && <3,
